--- a/src/components/WordInput/index.css
+++ b/src/components/WordInput/index.css
@@ -1,24 +1,21 @@
 .Input {
     width: 460px;
     height: 60px;
-    padding: .9rem 1.5rem 1.1rem;
+    padding: 0.9rem 1.5rem 1.1rem;
     border: none;
     caret-color: #ffffff;
     color: #ffffff;
     border-radius: 0;
 }
 
-
 .Input:focus-visible {
     outline: none;
 }
 
-
 .input-wrapper {
-    transition: all .3s;
-    border-radius: .375rem;
+    transition: all 0.3s;
+    border-radius: 0.375rem;
 }
-
 
 .input-wrapper::before {
     position: absolute;
@@ -28,8 +25,9 @@
     display: block;
     width: 100%;
     height: 100%;
-    content: "";
-    background-image: linear-gradient(var(--color-canvas-default), var(--color-canvas-default)), radial-gradient(circle at top left, var(--mktg-accent-primary, #9867f0), var(--mktg-accent-secondary, #ed4e50)) !important;
+    content: '';
+    background-image: linear-gradient(var(--color-canvas-default), var(--color-canvas-default)),
+        radial-gradient(circle at top left, var(--mktg-accent-primary, #9867f0), var(--mktg-accent-secondary, #ed4e50)) !important;
     background-clip: content-box, border-box !important;
     background-origin: border-box !important;
     border: double 1px transparent;
@@ -45,12 +43,13 @@
     display: block;
     width: 100%;
     height: 100%;
-    content: "";
+    content: '';
     background-clip: content-box, border-box !important;
     background-origin: border-box !important;
     border: double 1px transparent;
     border-radius: inherit;
-    background-image: linear-gradient(var(--color-canvas-default), var(--color-canvas-default)), radial-gradient(circle at top left, #fff, #fff) !important;
+    background-image: linear-gradient(var(--color-canvas-default), var(--color-canvas-default)),
+        radial-gradient(circle at top left, #fff, #fff) !important;
     opacity: 0 !important;
-    transition: opacity .3s ease;
+    transition: opacity 0.3s ease;
 }
